--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,20 @@
 .paddiing-left-5{
     padding-left: 5px !important;
 }
-
+span.z{
+/*    position: absolute;*/
+    top:2px;
+    display: inline;
+}
+.box{
+    position: relative;
+    width:auto;
+}
+.inside{
+    position: relative;
+    float: left;
+    padding-left:5px;
+}
 body {
     background-color: #fcfcfc;
 }
