--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,19 @@
     padding-left: 10px !important;
 }
 .padding-bottom-10{
-    padding-left: 10px !important;
+    padding-bottom: 10px !important;
 }
 .padding-top-10{
-    padding-left: 10px !important;
+    padding-top: 10px !important;
 }
 .padding-right-10{
-    padding-left: 10px !important;
+    padding-right: 10px !important;
 }
 .paddiing-left-5{
     padding-left: 5px !important;
+}
+#app-form{
+    display: none;
 }
 span.z{
 /*    position: absolute;*/
@@ -319,6 +322,7 @@ ul.side-nav.fixed hr {
     margin-right: 1rem;
     text-align: center;
     width: 2rem;
+    height: inherit;
 }
 #slide-out ul.side-nav li {
     padding: 0 !important;
