manage app page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,9 @@
 .paddiing-left-5{
     padding-left: 5px !important;
 }
+.padding-top-5{
+    padding-top: 5px !important;
+}
 #app-form{
     display: none;
 }
